--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>etext-manager</artifactId>
     <packaging>jar</packaging>
     <name>etext-manager</name>
-    <version>5.0.1-SNAPSHOT</version>
+    <version>5.0.0-SNAPSHOT</version>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -68,24 +68,26 @@
     <properties>
         <app.version>${project.version}</app.version>
         <datatables.version>1.13.5</datatables.version>
+        <datatables-buttons.version>2.4.1</datatables-buttons.version>
         <frontend-maven-plugin.version>1.11.0</frontend-maven-plugin.version>
-        <git-commit-id-maven-plugin.version>5.0.0</git-commit-id-maven-plugin.version>
+        <git-commit-id-maven-plugin.version>7.0.0</git-commit-id-maven-plugin.version>
         <hibernate5-ddl-maven-plugin.version>2.5.0</hibernate5-ddl-maven-plugin.version>
+        <hypersistence-utils-hibernate-55.version>3.7.3</hypersistence-utils-hibernate-55.version>
         <java.version>17</java.version>
         <jdk.source>17</jdk.source>
         <jdk.target>17</jdk.target>
         <jquery.version>3.7.1</jquery.version>
 
         <lms-canvas-rivet.version>5.2.6.0</lms-canvas-rivet.version>
-        <lms-embedded-services.version>5.2.31</lms-embedded-services.version>
-        <lms-team-spring-boot-it12>4.8</lms-team-spring-boot-it12>
+        <lms-embedded-services.version>5.2.33</lms-embedded-services.version>
+        <lms-team-spring-boot-it12>5.4.7</lms-team-spring-boot-it12>
 
-        <plugins.compiler.version>3.11.0</plugins.compiler.version>
+        <plugins.compiler.version>3.12.1</plugins.compiler.version>
         <plugins.gpg.version>3.1.0</plugins.gpg.version>
         <plugins.javadoc.version>3.6.3</plugins.javadoc.version>
-        <plugins.license.version>2.0.0</plugins.license.version>
+        <plugins.license.version>2.4.0</plugins.license.version>
         <plugins.nexus-staging.version>1.6.13</plugins.nexus-staging.version>
-        <plugins.release.version>3.0.0</plugins.release.version>
+        <plugins.release.version>3.0.1</plugins.release.version>
         <plugins.source.version>3.3.0</plugins.source.version>
         <springdoc-openapi-ui.version>1.7.0</springdoc-openapi-ui.version>
         <spring-cloud-starter-parent.version>2021.0.9</spring-cloud-starter-parent.version>
@@ -158,9 +160,15 @@
         </dependency>
         <dependency>
             <groupId>edu.iu.uits.lms</groupId>
-            <artifactId>lms-iu-variable-replacement-service</artifactId>
+            <artifactId>lms-email-service</artifactId>
             <version>${lms-embedded-services.version}</version>
-            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>edu.iu.uits.lms</groupId>
+            <artifactId>lms-email-service</artifactId>
+            <version>${lms-embedded-services.version}</version>
+            <type>test-jar</type>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -215,9 +223,18 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-rest</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>datatables</artifactId>
             <version>${datatables.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>datatables-buttons</artifactId>
+            <version>${datatables-buttons.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springdoc</groupId>
@@ -225,9 +242,31 @@
             <version>${springdoc-openapi-ui.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-data-rest</artifactId>
+            <version>${springdoc-openapi-ui.version}</version>
+        </dependency>
+        <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-csv</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-freemarker</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.hypersistence</groupId>
+            <artifactId>hypersistence-utils-hibernate-55</artifactId>
+            <version>${hypersistence-utils-hibernate-55.version}</version>
         </dependency>
     </dependencies>
 
@@ -273,7 +312,7 @@
             </plugin>
             <plugin>
                 <groupId>de.jpdigital</groupId>
-                <artifactId>hibernate54-ddl-maven-plugin</artifactId>
+                <artifactId>hibernate56-ddl-maven-plugin</artifactId>
                 <version>${hibernate5-ddl-maven-plugin.version}</version>
                 <executions>
                     <execution>
@@ -290,7 +329,7 @@
                     </dialects>
                     <packages>
                         <param>edu.iu.uits.lms.etextmanager</param>
-                        <param>edu.iu.uits.lms.iuonly</param>
+<!--                        <param>edu.iu.uits.lms.iuonly</param>-->
                         <param>edu.iu.uits.lms.lti</param>
                     </packages>
                 </configuration>
@@ -342,21 +381,21 @@
                 </configuration>
             </plugin>
         </plugins>
-        <resources>
-            <resource>
-                <directory>src/main/resources</directory>
-                <filtering>true</filtering>
-            </resource>
-            <resource>
-                <directory>src/main/java</directory>
-                <includes>
-                    <include>**</include>
-                </includes>
-                <excludes>
-                    <exclude>**/*.java</exclude>
-                </excludes>
-            </resource>
-        </resources>
+<!--        <resources>-->
+<!--            <resource>-->
+<!--                <directory>src/main/resources</directory>-->
+<!--                <filtering>true</filtering>-->
+<!--            </resource>-->
+<!--&lt;!&ndash;            <resource>&ndash;&gt;-->
+<!--&lt;!&ndash;                <directory>src/main/java</directory>&ndash;&gt;-->
+<!--&lt;!&ndash;                <includes>&ndash;&gt;-->
+<!--&lt;!&ndash;                    <include>**</include>&ndash;&gt;-->
+<!--&lt;!&ndash;                </includes>&ndash;&gt;-->
+<!--&lt;!&ndash;                <excludes>&ndash;&gt;-->
+<!--&lt;!&ndash;                    <exclude>**/*.java</exclude>&ndash;&gt;-->
+<!--&lt;!&ndash;                </excludes>&ndash;&gt;-->
+<!--&lt;!&ndash;            </resource>&ndash;&gt;-->
+<!--        </resources>-->
     </build>
 
     <profiles>
