LMSA-9231, LMSA-9225, LMSA-9226, LMSA-9227, LMSA-9230, LMSA-9228, LMSA-9229, LMSA-9295  UI enhancements, batch jobs for re-running imports and checking for reset courses  Migrate to the new datatable filter/ally extensions

--- a/src/test/resources/application-etext.properties
+++ b/src/test/resources/application-etext.properties
@@ -9,3 +9,6 @@ spring.jpa.generate-ddl=true
 spring.datasource.type=org.springframework.jdbc.datasource.DriverManagerDataSource
 
 app.env=CI
+
+
+logging.level.edu.iu.uits.lms=DEBUG
