--- a/pom.xml
+++ b/pom.xml
@@ -54,32 +54,33 @@
 
     <properties>
         <app.version>${project.version}</app.version>
-        <datatables.version>1.13.5</datatables.version>
-        <datatables-buttons.version>2.4.1</datatables-buttons.version>
+        <datatables.version>2.0.3</datatables.version>
+        <datatables-buttons.version>3.0.2</datatables-buttons.version>
+        <datatables-select.version>2.0.0</datatables-select.version>
         <frontend-maven-plugin.version>1.11.0</frontend-maven-plugin.version>
-        <git-commit-id-maven-plugin.version>7.0.0</git-commit-id-maven-plugin.version>
-        <hibernate5-ddl-maven-plugin.version>2.5.0</hibernate5-ddl-maven-plugin.version>
-        <hypersistence-utils-hibernate-55.version>3.7.3</hypersistence-utils-hibernate-55.version>
+        <git-commit-id-maven-plugin.version>8.0.2</git-commit-id-maven-plugin.version>
+        <hibernate5-ddl-maven-plugin.version>3.0.0</hibernate5-ddl-maven-plugin.version>
+        <hypersistence-utils-hibernate-55.version>3.7.5</hypersistence-utils-hibernate-55.version>
         <java.version>17</java.version>
         <jdk.source>17</jdk.source>
         <jdk.target>17</jdk.target>
         <jquery.version>3.7.1</jquery.version>
 
-        <lms-canvas-rivet.version>5.2.6.0</lms-canvas-rivet.version>
-        <lms-embedded-services.version>5.2.33</lms-embedded-services.version>
+        <lms-canvas-rivet.version>5.2.7.0_2-SNAPSHOT</lms-canvas-rivet.version>
+        <lms-embedded-services.version>5.2.35</lms-embedded-services.version>
         <lms-team-spring-boot-it12>5.4.7</lms-team-spring-boot-it12>
 
-        <plugins.compiler.version>3.12.1</plugins.compiler.version>
+        <plugins.compiler.version>3.13.0</plugins.compiler.version>
         <plugins.gpg.version>3.1.0</plugins.gpg.version>
         <plugins.javadoc.version>3.6.3</plugins.javadoc.version>
         <plugins.license.version>2.4.0</plugins.license.version>
         <plugins.nexus-staging.version>1.6.13</plugins.nexus-staging.version>
         <plugins.release.version>3.0.1</plugins.release.version>
         <plugins.source.version>3.3.0</plugins.source.version>
-        <springdoc-openapi-ui.version>1.7.0</springdoc-openapi-ui.version>
+        <springdoc-openapi-ui.version>1.8.0</springdoc-openapi-ui.version>
         <spring-cloud-starter-parent.version>2021.0.9</spring-cloud-starter-parent.version>
         <spring-security-bom.version>5.5.2</spring-security-bom.version>
-        <webjars-locator.version>0.50</webjars-locator.version>
+        <webjars-locator.version>0.52</webjars-locator.version>
     </properties>
 
     <dependencyManagement>
@@ -222,6 +223,11 @@
             <groupId>org.webjars</groupId>
             <artifactId>datatables-buttons</artifactId>
             <version>${datatables-buttons.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>datatables-select</artifactId>
+            <version>${datatables-select.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springdoc</groupId>
