--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
         <jdk.target>17</jdk.target>
         <jquery.version>3.7.1</jquery.version>
 
-        <lms-canvas-rivet.version>5.2.7.0_3-SNAPSHOT</lms-canvas-rivet.version>
+        <lms-canvas-rivet.version>5.2.7.0_5</lms-canvas-rivet.version>
         <lms-embedded-services.version>5.2.35</lms-embedded-services.version>
         <lms-team-spring-boot-it12>5.4.7</lms-team-spring-boot-it12>
 
