--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
         <jquery.version>3.7.1</jquery.version>
 
         <lms-canvas-rivet.version>6.2.8.1_1</lms-canvas-rivet.version>
-        <lms-embedded-services.version>6.1.1</lms-embedded-services.version>
+        <lms-embedded-services.version>6.1.3-SNAPSHOT</lms-embedded-services.version>
         <lms-team-spring-boot-it12>6.5.0</lms-team-spring-boot-it12>
 
         <plugins.compiler.version>3.13.0</plugins.compiler.version>
@@ -342,6 +342,7 @@
                         <exclude>**/etextmanager.properties</exclude>
                         <exclude>**/application-etext.properties</exclude>
                         <exclude>**/etext.sql</exclude>
+                        <exclude>**/logback-test.xml</exclude>
                     </excludes>
                 </configuration>
             </plugin>
