--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -108,7 +108,7 @@ springdoc:
     enabled: true
     path: /api/v3/api-docs
   cache.disabled: true
-  packagesToScan: edu.iu.uits.lms.etextmanager.controller.rest
+  packagesToScan: edu.iu.uits.lms.etextmanager
   swagger-ui:
     enabled: false
     disable-swagger-default-url: true
