--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>etext-manager</artifactId>
     <packaging>jar</packaging>
     <name>etext-manager</name>
-    <version>6.0.1-SNAPSHOT</version>
+    <version>6.0.1</version>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -49,7 +49,7 @@
         <connection>scm:git:https://github.com/indiana-university/lms-canvas-etext-manager.git</connection>
         <developerConnection>scm:git:https://github.com/indiana-university/lms-canvas-etext-manager.git</developerConnection>
         <url>https://github.com/indiana-university/lms-canvas-etext-manager</url>
-        <tag>HEAD</tag>
+        <tag>etext-manager-6.0.1</tag>
     </scm>
 
     <properties>
