--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,7 @@
 
         <lms-canvas-rivet.version>6.2.8.1_1</lms-canvas-rivet.version>
         <lms-embedded-services.version>6.1.5</lms-embedded-services.version>
-        <lms-team-spring-boot-it12>6.5.0</lms-team-spring-boot-it12>
+        <lms-team-spring-boot-it12>6.5.0_2</lms-team-spring-boot-it12>
 
         <plugins.compiler.version>3.13.0</plugins.compiler.version>
         <plugins.gpg.version>3.1.0</plugins.gpg.version>
