--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,7 @@
         <jdk.target>21</jdk.target>
         <jquery.version>3.7.1</jquery.version>
 
+        <logcaptor.version>2.10.1</logcaptor.version>
         <lms-canvas-rivet.version>6.2.8.1_1</lms-canvas-rivet.version>
         <lms-embedded-services.version>6.1.5</lms-embedded-services.version>
         <lms-team-spring-boot-it12>6.5.0_2</lms-team-spring-boot-it12>
@@ -253,6 +254,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-properties-migrator</artifactId>
             <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.github.hakky54</groupId>
+            <artifactId>logcaptor</artifactId>
+            <version>${logcaptor.version}</version>
         </dependency>
     </dependencies>
 
