--- a/pom.xml
+++ b/pom.xml
@@ -259,6 +259,7 @@
             <groupId>io.github.hakky54</groupId>
             <artifactId>logcaptor</artifactId>
             <version>${logcaptor.version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
